// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeScanningCamera renders correctly with default props 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
        "position": "relative",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Camera
      codeScanner={
        {
          "codeTypes": [
            "code-128",
            "code-39",
            "pdf-417",
          ],
          "onCodeScanned": [Function],
        }
      }
      device={
        {
          "hasTorch": true,
          "id": "back",
          "maxZoom": 8,
          "minZoom": 1,
          "supportsFocus": true,
        }
      }
      format={{}}
      isActive={true}
      ref={
        {
          "current": null,
        }
      }
      style={
        {
          "flex": 1,
        }
      }
      torch="off"
      zoom={1}
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "borderColor": "#003366",
          "borderRadius": 4,
          "borderWidth": 3,
          "height": 75,
          "left": "50%",
          "marginLeft": -150,
          "marginTop": -37.5,
          "position": "absolute",
          "top": "50%",
          "width": 300,
        }
      }
    />
  </View>
  <View
    style={
      {
        "position": "absolute",
        "right": 16,
        "top": 24,
      }
    }
  >
    <View
      accessibilityLabel="Scan.TorchOff"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderColor": "#FFFFFF",
          "borderRadius": 24,
          "borderWidth": 1,
          "height": 24,
          "justifyContent": "center",
          "marginBottom": 50,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="com.ariesbifold:id/ScanTorch"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            {
              "alignItems": "center",
            },
            {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`CodeScanningCamera renders with barcode highlight enabled 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
        "position": "relative",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Camera
      codeScanner={
        {
          "codeTypes": [
            "code-128",
            "code-39",
            "pdf-417",
          ],
          "onCodeScanned": [Function],
        }
      }
      device={
        {
          "hasTorch": true,
          "id": "back",
          "maxZoom": 8,
          "minZoom": 1,
          "supportsFocus": true,
        }
      }
      format={{}}
      isActive={true}
      ref={
        {
          "current": null,
        }
      }
      style={
        {
          "flex": 1,
        }
      }
      torch="off"
      zoom={1}
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "borderColor": "#003366",
          "borderRadius": 4,
          "borderWidth": 3,
          "height": 75,
          "left": "50%",
          "marginLeft": -150,
          "marginTop": -37.5,
          "position": "absolute",
          "top": "50%",
          "width": 300,
        }
      }
    />
  </View>
  <View
    style={
      {
        "position": "absolute",
        "right": 16,
        "top": 24,
      }
    }
  >
    <View
      accessibilityLabel="Scan.TorchOff"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderColor": "#FFFFFF",
          "borderRadius": 24,
          "borderWidth": 1,
          "height": 24,
          "justifyContent": "center",
          "marginBottom": 50,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="com.ariesbifold:id/ScanTorch"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            {
              "alignItems": "center",
            },
            {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`CodeScanningCamera renders with zoom enabled 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
        "position": "relative",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Camera
      codeScanner={
        {
          "codeTypes": [
            "code-128",
            "code-39",
            "pdf-417",
          ],
          "onCodeScanned": [Function],
        }
      }
      device={
        {
          "hasTorch": true,
          "id": "back",
          "maxZoom": 8,
          "minZoom": 1,
          "supportsFocus": true,
        }
      }
      format={{}}
      isActive={true}
      ref={
        {
          "current": null,
        }
      }
      style={
        {
          "flex": 1,
        }
      }
      torch="off"
      zoom={2}
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "borderColor": "#003366",
          "borderRadius": 4,
          "borderWidth": 3,
          "height": 75,
          "left": "50%",
          "marginLeft": -150,
          "marginTop": -37.5,
          "position": "absolute",
          "top": "50%",
          "width": 300,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "borderRadius": 16,
        "bottom": 100,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
        "position": "absolute",
      }
    }
  >
    <Text
      style={
        {
          "color": "white",
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      2.0
      x
    </Text>
  </View>
  <View
    style={
      {
        "position": "absolute",
        "right": 16,
        "top": 24,
      }
    }
  >
    <View
      accessibilityLabel="Scan.TorchOff"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderColor": "#FFFFFF",
          "borderRadius": 24,
          "borderWidth": 1,
          "height": 24,
          "justifyContent": "center",
          "marginBottom": 50,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="com.ariesbifold:id/ScanTorch"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            {
              "alignItems": "center",
            },
            {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`CodeScanningCamera respects min and max zoom constraints 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
        "position": "relative",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Camera
      codeScanner={
        {
          "codeTypes": [
            "code-128",
            "code-39",
            "pdf-417",
          ],
          "onCodeScanned": [Function],
        }
      }
      device={
        {
          "hasTorch": true,
          "id": "back",
          "maxZoom": 8,
          "minZoom": 1,
          "supportsFocus": true,
        }
      }
      format={{}}
      isActive={true}
      ref={
        {
          "current": null,
        }
      }
      style={
        {
          "flex": 1,
        }
      }
      torch="off"
      zoom={1}
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "borderColor": "#003366",
          "borderRadius": 4,
          "borderWidth": 3,
          "height": 75,
          "left": "50%",
          "marginLeft": -150,
          "marginTop": -37.5,
          "position": "absolute",
          "top": "50%",
          "width": 300,
        }
      }
    />
  </View>
  <View
    style={
      {
        "position": "absolute",
        "right": 16,
        "top": 24,
      }
    }
  >
    <View
      accessibilityLabel="Scan.TorchOff"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderColor": "#FFFFFF",
          "borderRadius": 24,
          "borderWidth": 1,
          "height": 24,
          "justifyContent": "center",
          "marginBottom": 50,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="com.ariesbifold:id/ScanTorch"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            {
              "alignItems": "center",
            },
            {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
